不顯示縮圖改成網址

--- a/index.html
+++ b/index.html
@@ -734,30 +734,30 @@
         </a>
       </div>
 
-      <!-- <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連fb貼文圖10m.png" />
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連fb貼文圖10m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖12m.png" />
+        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖12m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖15m.png" />
+        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖15m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖17m.png" />
+        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖17m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖8m.png" />
+        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖8m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖9m.png" />
+        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖9m.png" />
         </a>
-      </div> -->
+      </div>
 
       <div class="grid-item cis5">
         <a href="images/雙連掃code圖_1014.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
