補about成績單超連結開新視窗

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 
   <link rel="stylesheet" href="css/index.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.js"></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.zoom.js"></script>
+  <script src="js/skrollr.min.js"></script>
+  <script src="js/jquery-albe-timeline.min.js"></script>
+  <script script src="js/index.js"></script>
 
 
 
@@ -734,30 +745,6 @@
         </a>
       </div>
 
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連fb貼文圖10m.png" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖12m.png" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖15m.png" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖17m.png" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖8m.png" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="https://github.com/abonla/web_portfolio/blob/main/images/雙連FB貼文圖9m.png" />
-        </a>
-      </div>
 
       <div class="grid-item cis5">
         <a href="images/雙連掃code圖_1014.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
@@ -796,10 +783,7 @@
         <a href="images/宜蘭_報到處模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_報到處模擬m.jpg" />
         </a>
       </div>
-      <div class="grid-item cis6">
-        <a href="images/宜蘭_工作證.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_工作證m.png" />
-        </a>
-      </div>
+
       <div class="grid-item cis6">
         <a href="images/宜蘭_工作證模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_工作證模擬m.jpg" />
         </a>
@@ -826,10 +810,6 @@
       </div>
       <div class="grid-item cis6">
         <a href="images/宜蘭_集點app.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_集點appm.png" />
-        </a>
-      </div>
-      <div class="grid-item cis6">
-        <a href="images/宜蘭_集點卡正.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_集點卡正m.png" />
         </a>
       </div>
       <div class="grid-item cis6">
@@ -1304,23 +1284,6 @@
       rights reserved.</p>
   </footer>
   <button type="button" id="BackTop" class="toTop-arrow"></button>
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.js"></script>
-  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.zoom.js"></script>
-  <script src="js/skrollr.min.js"></script>
-  <script src="js/jquery-albe-timeline.min.js"></script>
-  <script script src="js/index.js"></script>
-
-
-
 </body>
 
 </html>
