--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="images/favicon_io/site.webmanifest">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +38,6 @@
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.zoom.js"></script>
   <script src="js/skrollr.min.js"></script>
   <script src="js/jquery-albe-timeline.min.js"></script>
   <script script src="js/index.js"></script>
@@ -50,13 +48,13 @@
 
 <body>
 
-  <!-- <div class="loading-page">
+  <div class="loading-page">
     <div class="counter">
       <p>loading</p>
       <h1>0%</h1>
       <hr>
     </div>
-  </div> -->
+  </div>
 
   <header>
     <div id="logo"><a data-filter="*:not(.bio)"><img class="animate__animated animate__bounce" src="images/logos.png"
