取消載入畫面

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
 <body>
 
-  <div class="loading-page">
+  <!-- <div class="loading-page">
     <div class="counter">
       <p>loading</p>
       <h1>0%</h1>
       <hr>
     </div>
-  </div>
+  </div> -->
 
   <header>
     <div id="logo"><a data-filter="*:not(.bio)"><img class="animate__animated animate__bounce" src="images/logos.png"
