把loadpage script放在index.html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
       <hr>
     </div>
   </div>
+  <script>
+    var counter = 0;
+	var c = 0;
+	var i = setInterval(function () {
+		$(".loading-page .counter h1").html(c + "%");
+		$(".loading-page .counter hr").css("width", c + "%");
+
+		counter++;
+		c++;	
+
+		if (counter == 101) {
+			clearInterval(i);
+			$('.loading-page').fadeOut(300);
+		}}, 50);
+  </script>
 
   <header>
     <div id="logo"><a data-filter="*:not(.bio)"><img class="animate__animated animate__bounce" src="images/logos.png"
