--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body>
 
-  <div class="loading-page">
+  <!-- <div class="loading-page">
     <div class="counter">
       <p>loading</p>
       <h1>0%</h1>
@@ -57,19 +57,20 @@
   </div>
   <script>
     var counter = 0;
-	var c = 0;
-	var i = setInterval(function () {
-		$(".loading-page .counter h1").html(c + "%");
-		$(".loading-page .counter hr").css("width", c + "%");
+    var c = 0;
+    var i = setInterval(function () {
+      $(".loading-page .counter h1").html(c + "%");
+      $(".loading-page .counter hr").css("width", c + "%");
 
-		counter++;
-		c++;	
+      counter++;
+      c++;
 
-		if (counter == 101) {
-			clearInterval(i);
-			$('.loading-page').fadeOut(300);
-		}}, 50);
-  </script>
+      if (counter == 101) {
+        clearInterval(i);
+        $('.loading-page').fadeOut(300);
+      }
+    }, 50);
+  </script> -->
 
   <header>
     <div id="logo"><a data-filter="*:not(.bio)"><img class="animate__animated animate__bounce" src="images/logos.png"
@@ -725,7 +726,7 @@
             src="images/捷運_掃描失敗網頁m.png" />
         </a>
       </div>
-      
+
       <div class="grid-item cis5">
         <a href="images/捷運_獎品內容清單.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img
             src="images/捷運_獎品內容清單m.png" />
@@ -736,7 +737,7 @@
             src="images/捷運_集點說明立牌m.png" />
         </a>
       </div>
-      
+
       <div class="grid-item cis5">
         <a href="images/雙連_圖片1.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片1m.jpg" />
         </a>
@@ -923,7 +924,7 @@
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe  src="https://www.youtube.com/embed/M7ZZksaB7xU" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/M7ZZksaB7xU" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
@@ -968,7 +969,7 @@
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe  src="https://www.youtube.com/embed/0F6tyGh-5Gc" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/0F6tyGh-5Gc" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
