--- a/index.html
+++ b/index.html
@@ -1088,6 +1088,74 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
+	    
+	    ******add cti news********
+	<div class="grid-item video news">
+        <iframe src="https://youtu.be/E_JQgy6kuNo" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	<div class="grid-item video news">
+        <iframe src="https://youtu.be/niluJxRqtQE" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/hdOvKPcQyq4" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/2DIcYBkEwck" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/NSkAke4SSj0" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/MpXitEdcHNc" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/yHDTUgMLWg4" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/AxOTB7jjsCs" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/7v3CBIyLj1A" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/YFCglHEhf2c" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/KWlRigeGyh4" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/jviaCzwBLA0" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    <div class="grid-item video news">
+        <iframe src="https://youtu.be/AysEScpTIzU" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      	</div>
+	    	 ******add cti news********
       <div class="grid-item news">
         <a href="images/1.jpg" data-fancybox="news" data-caption="新聞剪報"><img src="images/1m.jpg" /></a>
       </div>
@@ -1164,7 +1232,7 @@
           </h2>
           <ul>
             <i class="fa fa-id-card-o"
-              aria-hidden="true"></i></i>&nbsp;前《蘋果日報》娛樂記者<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;辰紘行銷視覺設計</li>
+              aria-hidden="true"></i></i>&nbsp;「中天新聞」文字記者</li>
             <li><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;輔仁大學大傳所畢業</li>
             <li>&nbsp;<i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;<a
                 href="tel:+886-905579995">0905579995</a></li>
@@ -1224,6 +1292,11 @@
           <hr>
           <h2>【工作經歷】</h2>
           <table>
+		<tr>
+              <td>2022/2~<br></td>
+              <th>中天新聞</th>
+              <td>文字記者</td>
+            </tr>
             <tr>
               <td>2021/9~<br>2021/12</td>
               <th>辰紘行銷</th>
