--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="一個熱愛學習的中年大叔，從事新聞工作十餘年，興趣是武術、音樂和影像創作，這是我的作品集網站，包括平面設計、3D動畫、攝影剪接、插畫，和過去採訪的新聞剪報。">
-  <meta name="keywords" content="程正邦,作品集,portfolio,cis,設計,攝影,剪接特效,插畫,新聞,輔仁大學,大眾傳播,蘋果日報,記者">
+  <meta name="keywords" content="程正邦,作品集,portfolio,cis,設計,攝影,剪接特效,插畫,新聞,輔仁大學,大眾傳播,蘋果日報,記者,復興美工,中天新聞">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="程正邦作品集" />
   <meta property="og:description"
@@ -1270,8 +1270,8 @@
         <article>
           <h3>設計，也許我天分不夠，但是我還沒放棄。</h3><br><br>
           <p>遺傳愛畫畫媽媽的天賦，自幼美術課常拿高分，國中畢業曾報考「復興美工」，因自認缺乏創意沒去就讀，但我對影像熱情不減，專科畢業後，插大考取銘傳大學大眾傳播系，大三拍攝的戲劇短片，代表學校參加廣電比賽。<br><br>
-            服役期間，在金門當新聞兵，退伍後當過攝影助理、遊戲編輯，最後在《蘋果日報》生根落腳，從事新聞工作十餘年，離開《蘋果》後在辰紘行銷擔任視覺設計。<br><br>
-            面對大眾媒體轉型和自媒體興起，工作之餘持續進修，2020年完成輔大大眾傳播碩士學位，仍深感設計力之不足，努力精進影像創作能力，期望成為理論與實務並重的傳播人。</p>
+            服役期間，在金門當新聞兵，退伍後當過攝影助理、遊戲編輯，最後在《蘋果日報》生根落腳，從事新聞工作十餘年，離開《蘋果》後曾嘗試轉換跑道做美術設計，幫台北捷運設設計燈箱文宣，目前在「中天新聞」當文字記者。<br><br>
+            面對大眾媒體轉型和自媒體興起，工作之餘持續進修，2020年完成輔大大眾傳播碩士學位，仍深感設計力之不足，到復興美工念夜間部，期望成為理論與實務並重的傳播人。</p>
           <br>
           <div id="social">
             <p>
