--- a/index.html
+++ b/index.html
@@ -1090,67 +1090,67 @@
       </div>
 	    
 	<div class="grid-item video news">
-        <iframe src="https://youtu.be/E_JQgy6kuNo" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/AysEScpTIzU" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	<div class="grid-item video news">
-        <iframe src="https://youtu.be/niluJxRqtQE" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/niluJxRqtQE" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/hdOvKPcQyq4" frameborder="0"
+        <iframe src="www.youtube.com/embed/NSkAke4SSj0" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/2DIcYBkEwck" frameborder="0"
+        <iframe src="www.youtube.com/embed/E_JQgy6kuNo" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/NSkAke4SSj0" frameborder="0"
+        <iframe src="www.youtube.com/embed/2DIcYBkEwck" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/MpXitEdcHNc" frameborder="0"
+        <iframe src="www.youtube.com/embed/jviaCzwBLA0" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/yHDTUgMLWg4" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/MpXitEdcHNc" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/AxOTB7jjsCs" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/yHDTUgMLWg4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/7v3CBIyLj1A" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/AxOTB7jjsCs" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/YFCglHEhf2c" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/7v3CBIyLj1A" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/KWlRigeGyh4" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/YFCglHEhf2c" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/jviaCzwBLA0" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/KWlRigeGyh4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="https://youtu.be/AysEScpTIzU" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/hdOvKPcQyq4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
