--- a/index.html
+++ b/index.html
@@ -1100,22 +1100,22 @@
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="www.youtube.com/embed/NSkAke4SSj0" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/NSkAke4SSj0" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="www.youtube.com/embed/E_JQgy6kuNo" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/E_JQgy6kuNo" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="www.youtube.com/embed/2DIcYBkEwck" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/2DIcYBkEwck" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
 	    <div class="grid-item video news">
-        <iframe src="www.youtube.com/embed/jviaCzwBLA0" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/jviaCzwBLA0" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       	</div>
