--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
           </h2>
           <ul>
             <i class="fa fa-id-card-o"
-              aria-hidden="true"></i></i>&nbsp;「三立新聞網」小夜主管</li>
+              aria-hidden="true"></i></i>&nbsp;「三立新聞網」編輯中心副組長</li>
             <li><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;輔仁大學大傳所畢業</li>
             <li>&nbsp;<i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;<a
                 href="tel:+886-905579995">0905579995</a></li>
