--- a/index.html
+++ b/index.html
@@ -1248,6 +1248,10 @@
               <td>新聞攝影</td>
               <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
             </tr>
+	    <tr>
+              <td>手繪能力</td>
+              <td>&#11088;&#11088;&#11088;&#11088;</td>
+            </tr>
             <tr>
               <td>平面設計</td>
               <td>&#11088;&#11088;</td>
