--- a/index.html
+++ b/index.html
@@ -184,6 +184,218 @@
       <div class="grid-item painter">
         <a href="images/draw.png" data-fancybox="painter" data-caption="類寫實"><img src="images/drawm.png" /></a>
       </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業00.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業00_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業01.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業01_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業02.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業02_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業03.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業03_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業04.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業04_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業05.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業05_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業06.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業06_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業07.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業07_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業08.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業08_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業09.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業09_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業10.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業10_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業11.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業11_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業12.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業12_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業13.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業13_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業14.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業14_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業15.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業15_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業16.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業16_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業17.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業17_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業18.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業18_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業19.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業19_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業20.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業20_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業21.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業21_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業22.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業22_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業23.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業23_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業24.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業24_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業25.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業25_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業26.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業26_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業27.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業27_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業28.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業28_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業29.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業29_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業30.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業30_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業31.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業31_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業32.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業32_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業33.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業33_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業34.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業34_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業35.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業35_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業36.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業36_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業37.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業37_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業38.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業38_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業39.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業39_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業40.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業40_m.jpg" /></a>
+      </div>
+        <a href="images/復興作業41.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業41_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業42.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業42_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業43.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業43_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業44.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業44_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業45.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業45_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業46.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業46_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業47.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業47_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業48.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業48_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業49.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業49_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業50.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業50_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業51.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業51_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業52.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業52_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業53.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業53_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業54.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業54_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業55.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業55_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業56.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業56_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業57.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業57_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業58.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業58_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業59.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業59_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業60.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業60_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業61.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業61_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業62.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業62_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業63.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業63_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業64.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業64_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業65.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業65_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業66.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業66_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業67.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業67_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業68.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業68_m.jpg" /></a>
+      </div>
+<div class="grid-item painter">
+        <a href="images/復興作業69.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業69_m.jpg" /></a>
+
+
+
+	    
       <div class="grid-item photo">
         <a href="images/160488761.jpg" data-fancybox="photo" data-caption="光影練習"><img src="images/160488761m.jpg" /></a>
       </div>
