--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
       </div>
       <div class="grid-item painter">
         <a href="images/復興作業40.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業40_m.jpg" /></a>
-      </div>
+<!--      </div>
         <a href="images/復興作業41.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業41_m.jpg" /></a>
-      </div>
+      </div>	-->
       <div class="grid-item painter">
         <a href="images/復興作業42.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業42_m.jpg" /></a>
       </div>
