--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <div class="grid-item painter">
         <a href="images/draw.png" data-fancybox="painter" data-caption="類寫實"><img src="images/drawm.png" /></a>
       </div>
-<!--       <div class="grid-item painter">
+      <div class="grid-item painter">
         <a href="images/復興作業00.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業00_m.jpg" /></a>
       </div>
       <div class="grid-item painter">
@@ -307,6 +307,7 @@
       <div class="grid-item painter">
         <a href="images/復興作業40.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業40_m.jpg" /></a>
       </div>
+      <div class="grid-item painter">
         <a href="images/復興作業41.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業41_m.jpg" /></a>
       </div>
       <div class="grid-item painter">
@@ -392,7 +393,7 @@
       </div>
       <div class="grid-item painter">
         <a href="images/復興作業69.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業69_m.jpg" /></a>
-      </div>	  	-->  
+      </div>
       <div class="grid-item photo">
         <a href="images/160488761.jpg" data-fancybox="photo" data-caption="光影練習"><img src="images/160488761m.jpg" /></a>
       </div>
