--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
             <tr>
               <td>2024/4~<br></td>
               <th>三立新聞網</th>
-              <td>小夜主管</td>
+              <td>編輯中心副組長</td>
             </tr>
             <tr>
               <td>2022/2~<br>2024/4</td>
@@ -1532,7 +1532,7 @@
             </tr>
             <tr>
               <td>2002/5~<br>2002/10</td>
-              <th>華義國際數位娛樂有限公司</th>
+              <th>華義國際數位娛樂</th>
               <td>出版部編輯</td>
             </tr>
             <tr>
