--- a/index.html
+++ b/index.html
@@ -394,6 +394,57 @@
       <div class="grid-item painter">
         <a href="images/復興作業69.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業69_m.jpg" /></a>
       </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業70.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業70_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業71.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業71_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業72.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業72_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業73.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業73_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業74.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業74_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業75.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業75_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業76.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業76_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業77.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業77_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業78.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業78_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業79.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業79_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業80.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業80_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業81.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業81_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業82.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業82_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業83.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業83_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業84.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業84_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業85.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業85_m.jpg" /></a>
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業86.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業86_m.jpg" /></a>
+      </div>        
       <div class="grid-item photo">
         <a href="images/160488761.jpg" data-fancybox="photo" data-caption="光影練習"><img src="images/160488761m.jpg" /></a>
       </div>
