--- a/index.html
+++ b/index.html
@@ -444,7 +444,10 @@
       </div>
       <div class="grid-item painter">
         <a href="images/復興作業86.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業86_m.jpg" /></a>
-      </div>        
+      </div>
+      <div class="grid-item painter">
+        <a href="images/復興作業87.jpg" data-fancybox="painter" data-caption="復興作業"><img src="images/復興作業87_m.jpg" /></a>
+      </div> 
       <div class="grid-item photo">
         <a href="images/160488761.jpg" data-fancybox="photo" data-caption="光影練習"><img src="images/160488761m.jpg" /></a>
       </div>
